# openlico

./: .fossa.yml  .gitignore  .gitlab-ci.yml  HISTORY  README.md  fossa-deps.yml  requirements.txt
clients/accounting/: .gitlab-ci.yml  MANIFEST.in  setup.cfg
clients/accounting/lico/client/accounting/: client.py  dataclass.py
clients/cluster/: setup.cfg  (+1 more)
clients/container/: .gitlab-ci.yml  setup.cfg
clients/container/lico/client/container/: client.py  dataclass.py  main.py
core/apps/accounting/: .gitlab-ci.yml  setup.cfg
core/apps/accounting/lico/core/accounting/: charge_job.py  charge_storage.py  exceptions.py  main.py  models.py  serializers.py  urls.py  utils.py
core/apps/accounting/lico/core/accounting/helpers/: deposit_report_helper.py  expense_report_helper.py
core/apps/accounting/lico/core/accounting/migrations/: 0001_lico_accounting_1_0_0.py  0002_lico_accounting_1_4_0.py  0003_lico_accounting_1_5_0.py
core/apps/accounting/lico/core/accounting/tasks/: balance_alert.py  billing_export.py  billing_statement.py  etc.py  generate_export.py
core/apps/accounting/lico/core/accounting/views/: balance.py  billgroup.py  billingreport.py  chargejob.py  consumeview.py  deposit.py  discount.py  gresource.py  queuepolicy.py  storagepolicy.py  user_billgroup.py
core/apps/alert/: .gitlab-ci.yml  setup.cfg  setup.py
core/apps/alert/lico/core/alert/: exceptions.py  main.py  models.py  notifications.py  urls.py  utils.py
core/apps/alert/lico/core/alert/migrations/: 0001_lico_core_alert_1_0_0.py  0002_lico_core_alert_1_1_1.py  0003_lico_core_alert_1_2_0.py  0004_lico_core_alert_1_3_0.py
core/apps/alert/lico/core/alert/scanner/: base.py  checker.py  datasource.py  judge.py
core/apps/alert/lico/core/alert/tasks/: __init__.py  agent_tasks.py  creator_tasks.py  scanner_tasks.py
core/apps/alert/lico/core/alert/views/: __init__.py  alert.py  policy.py  report.py  reportbase.py  script.py  target.py
core/apps/cloudtools/: .gitlab-ci.yml  setup.cfg
core/apps/cloudtools/lico/core/cloudtools/: cloudtools.py  exception.py  main.py  models.py  urls.py  utils.py
core/apps/cloudtools/lico/core/cloudtools/migrations/: 0001_lico_cloudtools_1_0_0_0.py
core/apps/cloudtools/lico/core/cloudtools/views/: openapi.py  views.py
core/apps/maintenance/: .gitlab-ci.yml  MANIFEST.in  setup.cfg
core/apps/maintenance/lico/core/maintenance/: exceptions.py  main.py  urls.py  utils.py
core/apps/maintenance/lico/core/maintenance/helpers/: res_summary.py
core/apps/maintenance/lico/core/maintenance/views/: node_resource_views.py  process_terminate_views.py
core/apps/monitor/: .gitlab-ci.yml  setup.cfg
core/apps/monitor/lico/core/monitor/: main.py
core/apps/monitor/lico/core/monitor/urls/: __init__.py
core/apps/monitor/lico/core/monitor/views/: file.py
core/apps/monitor/lico/core/monitor_host/: app.py  dataclass.py  datasource.py  exceptions.py  models.py  utils.py
core/apps/monitor/lico/core/monitor_host/migrations/: 0001_lico_monitor_host_1_0_0.py  0002_lico_monitor_host_1_1_0.py  0003_lico_monitor_host_1_4_0.py  0004_lico_monitor_host_1_5_0.py  0005_lico_monitor_host_1_6_0.py  __init__.py
core/apps/oneapi/: .gitlab-ci.yml  setup.cfg  tox.ini
core/apps/oneapi/lico/core/oneapi/: exceptions.py  main.py  urls.py
core/apps/operation/: .gitlab-ci.yml  setup.cfg  tox.ini
core/apps/operation/lico/core/operation/: exceptions.py  main.py  models.py  urls.py
core/apps/template/: .gitlab-ci.yml  setup.cfg  tox.ini
core/apps/template/lico/core/template/: exceptions.py  main.py  urls.py
core/apps/user/: .gitlab-ci.yml  setup.cfg  tox.ini
core/apps/user/lico/core/user/: authentication.py  database.py  exceptions.py  libuser.py  main.py  models.py  pam.py  synckey.py  tasks.py  urls.py  utils.py
core/apps/usermodule/: .gitlab-ci.yml  setup.cfg  setup.py
core/apps/usermodule/lico/core/usermodule/: exceptions.py  main.py  models.py  urls.py  utils.py
core/apps/workflow/: .gitlab-ci.yml  setup.cfg  tox.ini
core/apps/workflow/lico/core/workflow/: exceptions.py  main.py  models.py  schedules.py  urls.py  validators.py  views.py
core/base/: .gitlab-ci.yml  MANIFEST.in  setup.cfg  setup.py
core/base/lico/core/base/: __init__.py  celery.py  main.py  models.py  plugins.py  settings.py  settings_toml.py  subapp.py  urls.py  views.py  wsgi.py
core/base/lico/core/base/migrations/: 0001_lico_base_1_0_0.py  0002_lico_secret_key.py  0003_lico_base_7_2_0.py
core/contrib/: .gitlab-ci.yml  setup.cfg  setup.py  tox.ini
core/contrib/lico/client/auth/: client.py  dataclass.py  main.py
core/contrib/lico/client/influxdb/: main.py
core/contrib/lico/client/user/: client.py  main.py
core/contrib/lico/core/contrib/: authentication.py  base64.py  client.py  dataclass.py  eventlog.py  exceptions.py  fields.py  models.py  permissions.py  schema.py  views.py
daemon/async-task/: .gitlab-ci.yml  setup.cfg
daemon/async-task/etc/: async-task.ini
daemon/async-task/etc/lico.logging.d/: async-task.ini
daemon/async-task/lico/async/task/: exception.py  factory.py  manager.py  resource.py  utils.py
daemon/confluent-proxy/: .gitlab-ci.yml  MANIFEST.in  setup.cfg  tox.ini
daemon/confluent-proxy/etc/: confluent-proxy.ini
daemon/confluent-proxy/etc/lico.logging.d/: confluent-proxy.ini
daemon/confluent-proxy/lico/confluent/proxy/: __init__.py  client.py  factory.py  resource.py
daemon/file-manager/: .gitlab-ci.yml  setup.cfg  tox.ini
daemon/file-manager/etc/: file-manager.ini
daemon/file-manager/etc/lico.logging.d/: file-manager.ini
daemon/file-manager/lico/filesystem/manager/: __init__.py  adapter.py  cmd.py  connector.py  factory.py  plugin.py  resource.py  utils.py
daemon/file-manager/lico/filesystem/manager/imjoy_elfinder/: api_const.py  elfinder.py
daemon/mail-agent/: .gitlab-ci.yml  setup.cfg  setup.py
daemon/mail-agent/etc/: mail-agent.ini
daemon/mail-agent/etc/lico.logging.d/: mail-agent.ini
daemon/mail-agent/lico/notice/mail/: factory.py  resource.py
daemon/vnc-proxy/: .gitlab-ci.yml  setup.cfg  tox.ini
daemon/vnc-proxy/lico/vnc/proxy/: plugin.py
(+513 files in other folders)
