[metadata]
name = lico-accounting-client
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.client
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    lico-client-contrib

[options.packages.find]
include = lico.client.*

[options.entry_points]
lico.core.host.client =
    accounting = lico.client.accounting.main:get_client

[options.extras_require]
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2
