[metadata]
name = lico-core-base
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.core
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    setuptools>=39.2
    Django~=2.2.12
    djangorestframework~=3.13.1
    toml~=0.10.2
    py~=1.5
    celery~=4.4.7
    APScheduler~=3.8.1
    python-dateutil~=2.6.1

[options.packages.find]
include = lico.core.*

[options.entry_points]
console_scripts =
    lico = lico.core.base.main:main [executable]
paste.app_factory =
    main = lico.core.base.wsgi:make_application

[options.extras_require]
executable =
    gunicorn~=20.0.4
    supervisor~=4.2.4
    PasteDeploy~=2.1.1
    PyMySQL~=0.10.1
    lico-auth
    lico-password-tool
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2
