[metadata]
name = lico-core-contrib
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.core
    lico.client
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    setuptools>=39.2
    jsonschema~=3.2.0
    attrs~=19.3.0
    requests~=2.20.0
    jsonfield~=3.1.0
    influxdb~=5.3.0
    python-dateutil~=2.6.1
    lico-auth
    lico-password-tool
    lico-client-contrib
    lico-core-base

[options.packages.find]
include = lico.*

[options.extras_require]
influxdb_dataframe =
    pandas~=1.0.3
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
lico.core.client =
    influxdb = lico.client.influxdb.main:get_influxdb_client
    influxdb_dataframe = lico.client.influxdb.main:get_influxdb_dataframe_client [influxdb_dataframe]
    user = lico.client.user.main:get_user_client
lico.core.host.client =
    auth = lico.client.auth.main:get_host_client
