[metadata]
name = lico-async-task
license = Apache 2.0
classifiers =
        Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.async
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    falcon~=2.0.0
    jsonschema~=3.2.0
    APScheduler~=3.8.1
    psutil~=5.9.0
    py~=1.5
    pytz
    lico-filesystem-client
    lico-ssh

[options.packages.find]
include = lico.async.*

[options.extras_require]
executable =
    setuptools>=39.2
    gunicorn[gevent]~=20.0.4
    PasteDeploy~=2.1.1
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
paste.app_factory =
    main = lico.async.task.factory:proxy_app_factory
