[metadata]
name = lico-confluent-proxy
description = Restful server to support multi confluent session
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.confluent
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    falcon~=2.0.0
    requests~=2.20.0

[options.packages.find]
include = lico.confluent.*

[options.extras_require]
executable =
    gunicorn[gevent]~=20.0.4
    PasteDeploy~=2.1.1
    lico-auth
    lico-password-tool
dev = 
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
paste.app_factory =
    main = lico.confluent.proxy.factory:app_factory
