[metadata]
name = lico-file-manager
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.filesystem
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    falcon~=2.0.0
    falcon-multipart~=0.2.0
    attrs~=19.3.0
    jsonschema~=3.2.0
    simplejson~=3.13
    pathvalidate~=2.3.1
    Pillow~=8.4.0
    typing-extensions~=3.10.0
    python-dateutil~=2.6.1

[options.packages.find]
include = lico.filesystem.*

[options.extras_require]
executable =
    gunicorn~=20.0.4
    Paste~=2.0
    PasteDeploy~=2.1.1
    concurrent-log-handler~=0.9.16
    lico-auth
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
paste.app_factory =
    main = lico.filesystem.manager.factory:create_app
console_scripts =
    lico-check-symbolic-link-cycle = lico.filesystem.manager.cmd:main
