[metadata]
name = lico-mail-agent
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.notice
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    falcon~=2.0.0
    jsonschema~=3.2.0

[options.packages.find]
include = lico.notice.*

[options.extras_require]
executable =
    gunicorn[gevent]~=20.0.4
    PasteDeploy~=2.1.1
    lico-auth
dev =
    tox>=2.8
    setuptools>=36.0
    flake8>=3.4
    isort>=4.2

[options.entry_points]
paste.app_factory =
    main = lico.notice.mail.factory:app_factory
