[metadata]
name = lico-vnc-proxy
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.vnc
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    websockify~=0.10.0

[options.packages.find]
include = lico.vnc.*

[options.extras_require]
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2
