[metadata]
name = lico-core-operation
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.core
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    WeasyPrint~=51.0
    Pillow~=8.4.0
    XlsxWriter~=1.4.5
    python-dateutil~=2.6.1
    lico-core-contrib

[options.packages.find]
include = lico.core.*

[options.extras_require]
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
lico.core.application =
    operation = lico.core.operation.main:Application
