[metadata]
name = lico-core-template
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.core
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    pandas~=1.0.3
    lico-container-client
    lico-mail-client
    lico-core-contrib
    lico-core-container

[options.packages.find]
include = lico.core.*

[options.extras_require]
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
lico.core.application =
    template = lico.core.template.main:Application
console_scripts = 
    lico-lmod-verify = lico.core.template.management.scripts.lmod_verify:main
