[metadata]
name = lico-core-user
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.core
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    pamela~=1.0
    PyJWT~=1.6.1
    attrs~=19.3.0
    chardet~=3.0.4
    python-dateutil~=2.6.1
    py~=1.5
    singledispatchmethod; python_version < "3.8"
    lico-auth
    lico-password-tool
    lico-core-contrib

[options.packages.find]
include = lico.core.*

[options.extras_require]
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
lico.core.application =
    user = lico.core.user.main:Application
