[metadata]
name = lico-core-usermodule
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.core
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    attrs~=19.3.0
    pyyaml~=6.0
    lico-core-contrib
    lico-core-job
    lico-core-template

[options.packages.find]
include = lico.core.*

[options.extras_require]
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
lico.core.application =
    usermodule = lico.core.usermodule.main:Application
lico.core.usermodule.easybuildutils =
    EasyBuildUtils = lico.core.usermodule.utils:EasyBuildUtils
