[metadata]
name = lico-core-workflow
license = Apache 2.0
classifiers =
    Private :: Do Not Upload

[options]
python_requires = >=3.6
namespace_packages=
    lico
    lico.core
packages = find_namespace:
include_package_data = true
zip_safe = false
install_requires =
    lico-core-contrib
    lico-template-client
    django-timezone-field~=4.1.2
    croniter~=1.3.5
    pytz

[options.packages.find]
include = lico.core.*

[options.extras_require]
dev =
    tox>=2.8
    flake8>=3.4
    flake8-isort>=2.2
    isort>=4.2

[options.entry_points]
lico.core.application =
    workflow = lico.core.workflow.main:Application
